# Zodiac-Engine-Project

./: .gitattributes  .gitignore  BUILD_ORDER.h  CMakeLists.txt  README.md  Validation.h  VulkanConfiguration.h  VulkanEngineProject.sln  VulkanEngineProject.vcxproj  VulkanInstance.cpp  ZodiacEngine.sln  build.bat  build_osx.sh  capture.rdc  main.cpp
Dependencies/VulkanSDK/Lib32/: shaderc_combined.lib  vulkan-1.lib
VulkanEngineProject/: Application.cpp  Application.h  BUILD_ORDER.h  Camera.h  Clock.h  DepthStencil.h  ImGuiLayer.cpp  ImGuiLayer.h  Initializers.cpp  Initializers.h  Mesh.h  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  QueueFamilyIndices.h  Renderer.cpp  Renderer.h  Settings.h  System.cpp  System.h  Texture.h  Validation.cpp  Validation.h  Vertex.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanConfiguration.h  VulkanDevice.cpp  VulkanDevice.h  VulkanEngineProject.sln  VulkanEngineProject.vcxproj  VulkanEngineProject.vcxproj.filters  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.cpp  (+13 more)
VulkanEngineProject/Dependencies/VulkanSDK/Include/shaderc/: shaderc.hpp
VulkanEngineProject/Dependencies/VulkanSDK/Include/vulkan/: spirv.hpp  vulkan.hpp  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_funcs.hpp  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_profiles.hpp  vulkan_raii.hpp  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_structs.hpp  vulkan_to_string.hpp  vulkan_video.hpp
VulkanEngineProject/Dependencies/VulkanSDK/Include/vulkan/utility/: vk_concurrent_unordered_map.hpp  vk_safe_struct.hpp  vk_safe_struct_utils.hpp  vk_small_containers.hpp  vk_sparse_range_map.hpp
VulkanEngineProject/Dependencies/VulkanSDK/Lib/: shaderc_combined.lib
VulkanEngineProject/Dependencies/VulkanSDK/Lib32/: VkLayer_utils.lib
VulkanEngineProject/Dependencies/imgui/: imgui_impl_opengl3.cpp
VulkanEngineProject/Shaders/: compile.bat  frag.spv  simpleShader.vert
ZodiacApplication/: CMakeLists.txt  SandboxApp.cpp  ZodiacApplication.vcxproj  ZodiacApplication.vcxproj.filters
ZodiacApplication/Dependencies/Zodiac/include/Zodiac/: Application.h  Initializers.h  QueueFamilyIndices.h  Renderer.h  Settings.h  System.h  Validation.h  Vertex.h  VulkanBuffer.h  VulkanDevice.h  Window.h  Zodiac.h
ZodiacApplication/Dependencies/Zodiac/lib/: VulkanEngineProject.lib
ZodiacEngine/: CMakeLists.txt  Defines.h  EntryPoint.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.h  SurfaceDetails.h  Validation.cpp  VulkanFence.cpp  VulkanFramebuffer.h  VulkanSurface.cpp  Zodiac.h  ZodiacEngine.vcxproj  ZodiacEngine.vcxproj.filters  Zodiacpch.cpp
ZodiacEngine/Dependencies/GLFW/lib-vc2015/: glfw3.lib  glfw3dll.lib
ZodiacEngine/Dependencies/assimp/lib/x64/: assimp-vc143-mt.lib
ZodiacEngine/Dependencies/libktx/lib/: ktx.lib  libktx.4.4.2.dylib
ZodiacEngine/Dependencies/slang/include/: slang-tag-version.h
ZodiacEngine/Dependencies/slang/lib/: libslang-compiler.dylib  libslang-rt.dylib  slang-compiler.lib  slang-rt.lib  slang.lib
ZodiacEngine/Resources/Textures/: default.ktx2
ZodiacEngine/Shaders/: compile.bat  default_material_props.slang  lighting-diffuse.slang  lighting-hair.slang  lighting-specular.slang  lighting.slang  math.slang  simpleShader.frag  simpleShader.vert  test.slang  test.spv  triangle.frag.spv  triangle.spv  triangle.vert.spv
ZodiacEngine/Source/: main.cpp
ZodiacEngine/Source/Assets/: AssetManager.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshImporter.cpp  MeshImporter.h  MeshLoader.h  MeshWriter.cpp  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureArray.cpp  TextureArray.h  TextureImporter.cpp  TextureImporter.h  Transform.cpp  Transform.h  Vertex.h  ZodiacMesh.h
ZodiacEngine/Source/ECS/: Components.h
ZodiacEngine/Source/Engine/: Clock.cpp  Clock.h  Defines.h  FileWatcher.cpp  FileWatcher.h  Scene.cpp  Scene.h  System.cpp  System.h  Utility.cpp  Utility.h  Window.cpp  Window.h  Zodiacpch.h
ZodiacEngine/Source/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
ZodiacEngine/Source/Input/: CameraMovement.cpp  CameraMovement.h  Input.h  InputHandler.cpp  InputHandler.h
ZodiacEngine/Source/Renderer/: Camera.cpp  Camera.h  Material.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h
ZodiacEngine/Source/Vulkan/: Initializers.cpp  Initializers.h  StagingBuffer.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPhysicalDevice.h  VulkanSemaphore.cpp  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSwapChainBuffer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h
